--- a/plugins/fastpath/src/main/resources/fastpath.properties
+++ b/plugins/fastpath/src/main/resources/fastpath.properties
@@ -18,42 +18,42 @@ LOGIN_DIALOG_AUTHENTICATING = Authenticating...
 MAIN_IMAGE = images/message.png
 MAIN_IMAGE_ICO = images/icon_16.ico
 SMALL_CHECK = images/icons/accept.png
-SMALL_DELETE = images/icons/remove.png
-AVAILABLE_USER = images/icons/user.png
+SMALL_DELETE = images/icons/light/remove.png
+AVAILABLE_USER = images/icons/light/user.png
 AWAY_USER = images/awayUser.png
 FIND_IMAGE = images/find.png
-SMALL_ADD_IMAGE = images/icons/add.png
+SMALL_ADD_IMAGE = images/icons/light/add.png
 DOCUMENT_EXCHANGE_IMAGE = images/document_exchange.png
 SMALL_DOCUMENT_ADD = images/document_add.png
-SMALL_CIRCLE_DELETE = images/icons/close.png
+SMALL_CIRCLE_DELETE = images/icons/light/close.png
 SMALL_DOCUMENT_VIEW = images/document_view.png
-SMALL_USER1_MESSAGE = images/icons/chat_settings.png
-USER1_MESSAGE_24x24 = images/icons/chat_settings.png
+SMALL_USER1_MESSAGE = images/icons/light/chat_settings.png
+USER1_MESSAGE_24x24 = images/icons/light/chat_settings.png
 SMALL_USER1_TIME = images/user1_time.png
-SMALL_USER1_NEW = images/icons/create.png
+SMALL_USER1_NEW = images/icons/light/create.png
 SMALL_USER1_STOPWATCH = images/stopwatch_pause.png
 SMALL_USER1_MOBILEPHONE = images/user1_mobilephone.png
-SMALL_USER1_INFORMATION = images/icons/subscribe.png
+SMALL_USER1_INFORMATION = images/icons/light/subscribe.png
 SMALL_ENTRY = images/icons/small_entry.png
 SMALL_AGENT_IMAGE = images/small_agent.png
 CHATTING_AGENT_IMAGE = images/user1.png
 CHATTING_CUSTOMER_IMAGE = images/user2.png
-INFORMATION_IMAGE = images/icons/about.png
+INFORMATION_IMAGE = images/icons/light/about.png
 BLANK_IMAGE = images/blank.gif
 USER_HEADSET_24x24 = images/user_headset24.png
 FOLDER_CLOSED = images/folder_closed.png
-FOLDER = images/folder.png
+FOLDER = images/light/folder.png
 SMALL_PIN_BLUE = images/pin_blue.png
-SMALL_DATA_FIND_IMAGE = images/icons/search.png
-SMALL_BUSINESS_MAN_VIEW = images/icons/edit_profile.png
+SMALL_DATA_FIND_IMAGE = images/icons/light/search.png
+SMALL_BUSINESS_MAN_VIEW = images/icons/light/edit_profile.png
 SMALL_ALL_AGENTS_IMAGE = images/user1_earth.png
-SMALL_WORKGROUP_QUEUE_IMAGE = images/icons/start_conference.png
-SMALL_ALL_CHATS_IMAGE = images/icons/contacts.png
-SMALL_CURRENT_AGENTS = images/icons/users.png
-HELP2_24x24 = images/icons/help.png
-SMALL_ALARM_CLOCK = images/icons/alarmclock.png
+SMALL_WORKGROUP_QUEUE_IMAGE = images/icons/light/light/start_conference.png
+SMALL_ALL_CHATS_IMAGE = images/icons/light/contacts.png
+SMALL_CURRENT_AGENTS = images/icons/light/users.png
+HELP2_24x24 = images/icons/light/help.png
+SMALL_ALARM_CLOCK = images/icons/light/alarmclock.png
 SMALL_SCROLL_REFRESH = images/scroll_refresh.png
-SMALL_QUESTION = images/icons/help.png
+SMALL_QUESTION = images/icons/light/help.png
 USER1_32x32 = images/User1_32x32.png
 DATA_DELETE_16x16 = images/data_delete.png
 DATA_REFRESH_16x16 = images/data_refresh.png
@@ -61,27 +61,27 @@ USER1_BACK_16x16 = images/user1_back.png
 FONT_16x16 = images/font.png
 DOCUMENT_FIND_16x16 = images/document_find.png
 DOCUMENT_INFO_32x32 = images/document_info.png
-DOCUMENT_16x16 = images/icons/note.png
-SMALL_CLOSE_BUTTON = images/icons/close.png
-COPY_16x16 = images/icons/copy.png
+DOCUMENT_16x16 = images/icons/light/note.png
+SMALL_CLOSE_BUTTON = images/icons/light/close.png
+COPY_16x16 = images/icons/light/copy.png
 BLANK_24x24 = images/blank_24x24.png
 PUSH_URL_16x16 = images/earth_connection-16x16.png
-LINK_16x16 = images/icons/link.png
-LINK_DELETE_16x16 = images/icons/link_delete.png
+LINK_16x16 = images/icons/light/link.png
+LINK_DELETE_16x16 = images/icons/light/link_delete.png
 EARTH_LOCK_16x16 = images/earth_lock-16x16.png
-LOCK_16x16 = images/icons/lock.png
-LOCK_UNLOCK_16x16 = images/icons/unlock.png
+LOCK_16x16 = images/icons/light/lock.png
+LOCK_UNLOCK_16x16 = images/icons/light/unlock.png
 ONLINE_ICO = images/icon1.ico
 OFFLINE_ICO = images/icon2.ico
 INFORMATION_ICO = images/icon3.ico
-SAVE_AS_16x16 = images/icons/save.png
+SAVE_AS_16x16 = images/icons/light/save.png
 NOTE_EDIT_16x16 = images/note_edit.png
-ADDRESS_BOOK_16x16 = images/icons/address_book.png
-MEGAPHONE_16x16 = images/icons/broadcast.png
+ADDRESS_BOOK_16x16 = images/icons/light/address_book.png
+MEGAPHONE_16x16 = images/icons/light/broadcast.png
 EARTH_VIEW_16x16 = images/earth_view.png
-HISTORY_16x16 = images/icons/history.png
-DOWNLOAD_16x16 = images/icons/downloads.png
-RED_FLAG_16x16 = images/icons/ban.png
+HISTORY_16x16 = images/icons/light/history.png
+DOWNLOAD_16x16 = images/icons/light/downloads.png
+RED_FLAG_16x16 = images/icons/light/ban.png
 GREEN_FLAG_16x16 = images/flag_green.png
 YELLOW_FLAG_16x16 = images/flag_yellow.png
 FUNNEL_DOWN_16x16 = images/funnel_down.png
@@ -99,20 +99,20 @@ PAWN_GLASS_YELLOW = images/pawn_glass_yellow.png
 PLUS_SIGN = images/plus-sign.png
 MINUS_SIGN = images/minus-sign.png
 MAGICIAN_IMAGE = images/magician.png
-FIND_TEXT_IMAGE = images/icons/lookup.png
-LOGIN_KEY_IMAGE = images/icons/login.png
-BRICKWALL_IMAGE = images/icons/block.png
-MODERATOR_IMAGE = images/icons/moderator.png
-DESKTOP_IMAGE = images/icons/tasklist.png
+FIND_TEXT_IMAGE = images/icons/light/lookup.png
+LOGIN_KEY_IMAGE = images/icons/light/login.png
+BRICKWALL_IMAGE = images/icons/light/block.png
+MODERATOR_IMAGE = images/icons/light/moderator.png
+DESKTOP_IMAGE = images/icons/light/tasklist.png
 SPELL_CHECK_IMAGE = images/text_ok.png
-BUSY_IMAGE = images/icons/busy.gif
-CLOSE_IMAGE = images/icons/close.png
+BUSY_IMAGE = images/icons/light/busy.gif
+CLOSE_IMAGE = images/icons/light/close.png
 VIEW_IMAGE = images/view.png
 MOBILE_PHONE_IMAGE = images/mobilephone.png
 ON_PHONE_IMAGE = images/icons/on-phone.png
-REFRESH_IMAGE = images/icons/refresh.png
-CLOSE_WHITE_X_IMAGE = images/icons/close.png
-CLOSE_DARK_X_IMAGE = images/icons/close.png
+REFRESH_IMAGE = images/icons/light/refresh.png
+CLOSE_WHITE_X_IMAGE = images/icons/light/close.png
+CLOSE_DARK_X_IMAGE = images/icons/light/close.png
 
 
 # Global Values
@@ -162,48 +162,48 @@ CO_BROWSER_TAB_TITLE = Co-Browser
 FORUM_TAB_TITLE = Forums
 
 #Images
-CONFERENCE_IMAGE_24x24 = images/icons/invite24.png
-CONFERENCE_IMAGE_16x16 = images/icons/conference.png
-PROFILE_IMAGE_24x24 = images/icons/profile24.png
-SEARCH_USER_16x16 = images/icons/search.png
-SEND_FILE_24x24 = images/icons/send_file24.png
-ADD_IMAGE_24x24 = images/icons/add_user_24.png
-TELEPHONE_24x24 = images/icons/phone.png
+CONFERENCE_IMAGE_24x24 = images/icons/light/invite24.png
+CONFERENCE_IMAGE_16x16 = images/icons/light/conference.png
+PROFILE_IMAGE_24x24 = images/icons/light/profile24.png
+SEARCH_USER_16x16 = images/icons/light/search.png
+SEND_FILE_24x24 = images/icons/light/send_file24.png
+ADD_IMAGE_24x24 = images/icons/light/add_user_24.png
+TELEPHONE_24x24 = images/icons/light/phone.png
 IM_DND = images/icons/im_dnd.png
 IM_AWAY = images/icons/im_away.png
 MESSAGE_AWAY = images/message_away.png
 MESSAGE_DND = images/message_dnd.png
-ERASER_IMAGE = images/icons/clear.png
+ERASER_IMAGE = images/icons/light/clear.png
 TOOLBAR_BACKGROUND = images/toolbar.png
 TRAFFIC_LIGHT_IMAGE = images/traffic-light.png
-SERVER_ICON = images/icons/conferences.png
-BOOKMARK_ICON = images/icons/bookmark.png
-ADD_BOOKMARK_ICON = images/icons/bookmark.png
-DELETE_BOOKMARK_ICON = images/icons/remove.png
+SERVER_ICON = images/icons/light/conferences.png
+BOOKMARK_ICON = images/icons/light/bookmark.png
+ADD_BOOKMARK_ICON = images/icons/light/bookmark.png
+DELETE_BOOKMARK_ICON = images/icons/light/remove.png
 CLEAR_BALL_ICON = images/icons/im_unavailable.png
 CALL_ICON = images/call.png
-PROFILE_ICON = images/profile.png
-SEND_FILE_ICON = images/icons/send_file.png
-ADD_CONTACT_IMAGE = images/icons/add_user.png
-JOIN_GROUPCHAT_IMAGE = images/icons/join.png
+PROFILE_ICON = images/icons/light/profile.png
+SEND_FILE_ICON = images/icons/light/send_file.png
+ADD_CONTACT_IMAGE = images/icons/light/add_user.png
+JOIN_GROUPCHAT_IMAGE = images/icons/light/join.png
 DOWN_ARROW_IMAGE = images/down_arrow.gif
-PRINTER_IMAGE_16x16 = images/icons/print.png
+PRINTER_IMAGE_16x16 = images/icons/light/print.png
 SEND_MAIL_IMAGE_16x16 = images/sendmail.png
-SEARCH_IMAGE_32x32 = images/icons/search.png
+SEARCH_IMAGE_32x32 = images/icons/light/search.png
 MAIL_IMAGE_32x32 = images/mail_32x32.png
-PREFERENCES_IMAGE = images/icons/preferences.png
-NOTEBOOK_IMAGE = images/icons/notebook.png
+PREFERENCES_IMAGE = images/icons/light/preferences.png
+NOTEBOOK_IMAGE = images/icons/light/notebook.png
 TEXT_BOLD = images/text_bold.png
 TEXT_ITALIC = images/text_italics.png
 TEXT_UNDERLINE = images/text_underlined.png
 TEXT_NORMAL = images/text_normal.png
-SMALL_USER_ENTER = images/icons/join.png
-SMALL_USER_DELETE = images/icons/remove.png
+SMALL_USER_ENTER = images/icons/light/join.png
+SMALL_USER_DELETE = images/icons/light/remove.png
 QUESTIONS_ANSWERS = images/questionsAnswers.png
-SMALL_MESSAGE_IMAGE = images/icons/start_chat.png
-SMALL_MESSAGE_EDIT_IMAGE = images/icons/edit.png
-SMALL_ABOUT_IMAGE = images/icons/about.png
-DOOR_IMAGE = images/icons/join.png
+SMALL_MESSAGE_IMAGE = images/icons/light/start_chat.png
+SMALL_MESSAGE_EDIT_IMAGE = images/icons/light/edit.png
+SMALL_ABOUT_IMAGE = images/icons/light/about.png
+DOOR_IMAGE = images/icons/light/join.png
 STAR_BLUE_IMAGE = images/icons/star_blue.png
 STAR_RED_IMAGE = images/icons/star_red.png
 STAR_GREY_IMAGE = images/icons/star.png
@@ -213,18 +213,18 @@ LEFT_ARROW_IMAGE = images/arrow_left_green.png
 RIGHT_ARROW_IMAGE = images/arrow_right_green.png
 BACKGROUND_IMAGE = images/background.png
 FREE_TO_CHAT_IMAGE = images/icons/im_free_chat.png
-SOUND_PREFERENCES_IMAGE = images/icons/sound.png
+SOUND_PREFERENCES_IMAGE = images/icons/light/sound.png
 SPARK_LOGOUT_IMAGE = images/spark_100.jpg
-PHOTO_IMAGE = images/icons/screenshot24.png
-PLUGIN_IMAGE = images/icons/plugins.png
+PHOTO_IMAGE = images/icons/light/screenshot24.png
+PLUGIN_IMAGE = images/icons/light/plugins.png
 SMALL_PROFILE_IMAGE = images/small_profile.png
 CHANGELOG_IMAGE = images/doc-changelog-16x16.gif
 README_IMAGE = images/doc-readme-16x16.gif
-DOWN_OPTION_IMAGE = images/icons/collapse_down.png
+DOWN_OPTION_IMAGE = images/icons/light/collapse_down.png
 STICKY_NOTE_IMAGE = images/sticky.png
-HISTORY_24x24 = images/icons/history24.png
-PANE_UP_ARROW_IMAGE = images/icons/collapse_up.png
-PANE_DOWN_ARROW_IMAGE = images/icons/collapse_down.png
+HISTORY_24x24 = images/icons/light/history24.png
+PANE_UP_ARROW_IMAGE = images/icons/light/collapse_up.png
+PANE_DOWN_ARROW_IMAGE = images/icons/light/collapse_down.png
 
 #Fastpath Icons
 FASTPATH_IMAGE_16x16 = images/fastpath16.png
@@ -232,10 +232,10 @@ FASTPATH_IMAGE_24x24 = images/fastpath24.png
 FASTPATH_IMAGE_32x32 = images/fastpath32.png
 FASTPATH_IMAGE-64x63 = images/fastpath64.png
 CIRCLE_CHECK_IMAGE = images/check.png
-TRANSFER_IMAGE_24x24 = images/icons/add_user_24.png
+TRANSFER_IMAGE_24x24 = images/icons/light/add_user_24.png
 FASTPATH_OFFLINE_IMAGE_16x16 = images/fastpath16_offline.png
 FASTPATH_OFFLINE_IMAGE_24x24 = images/fastpath24_offline.png
-USER1_ADD_16x16 = images/icons/add_user.png
+USER1_ADD_16x16 = images/icons/light/add_user.png
 END_BUTTON_24x24 = images/end_button_24x24.png
 POWERED_BY_IMAGE = images/powered_by.png
 CHAT_INVITE_IMAGE_24x24 = images/icon_chatinvite_24x24.png
