--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-java@v5
         with:
             java-version: ${{ matrix.java }}
+            distribution: zulu
 
       - name: Cache Maven packages
         uses: actions/cache@v4
